--- a/Updated Version/Images/README.nd
+++ b/Updated Version/Images/README.nd
@@ -1,4 +1,4 @@
-Background folder - yung background sa lahat ng FXML (except sa Receipt).
+Background % Logo folder - yung background sa lahat ng FXML (except sa Receipt) tapos yung logo, lagay sa Login at Forgot Password pati sa Receipt.
 Checkout folder - lahat ng images sa Checkout fxml.
 Home folder - lahat ng images sa Home fxml (bukod pa yung images ng mga Products dyan).
 Login&ForgotPassword folder - lahat ng images sa Login at Forgot Password fxml.
