--- a/Updated Version/Images/README.nd
+++ b/Updated Version/Images/README.nd
@@ -6,3 +6,4 @@ Products folder - images nung mga products sa Home fxml.
 Receipt folder - lahat ng images na nasa Receipt fxml.
 
 Para hindi malito kung saan ilalagay yung images :)
+Pag naulit yung gif or jpg or png sa ibang folder, iisa lang yung mga yorn. Paalala lang yorn na ginamit ko ulit yon sa ibang fxml.
